--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start:pm2": "PORT=3006 pm2 start bin/www --watch . --name cp6-3006",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -11,6 +12,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "mongoose": "^4.13.6",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   }
